fix pictures